added packages.txt file

--- a/Notebooks/02 - Mapping of EC with pH and Temperature in Kaggle Dataset.ipynb
+++ b/Notebooks/02 - Mapping of EC with pH and Temperature in Kaggle Dataset.ipynb
@@ -10,9 +10,7 @@
    "source": [
     "import joblib\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "plt.style.use({'figure.facecolor':'white'})"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -30,7 +28,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('C:/Users/mwaqa/Desktop/FYP-Soil-Analysis/Data/Kaggle Dataset of N, P, K, pH, Temperature and Labels.csv')\n",
+    "df = pd.read_csv('../Data/Kaggle Dataset of N, P, K, pH, Temperature and Labels.csv')\n",
     "df.head()"
    ],
    "metadata": {
@@ -78,14 +76,18 @@
     }
    ],
    "source": [
-    "model_01 = joblib.load('C:/Users/mwaqa/Desktop/FYP-Soil-Analysis/Models/EC - pH Adjusted Data Model.h5')\n",
-    "model_02 = joblib.load('C:/Users/mwaqa/Desktop/FYP-Soil-Analysis/Models/EC - pH Original Data Model.h5')\n",
+    "model_01 = joblib.load('../Models/EC - pH Adjusted Data Model.h5')\n",
+    "model_02 = joblib.load('../Models/EC - pH Original Data Model.h5')\n",
     "EC_01 = model_01.predict(X)\n",
     "EC_02 = model_02.predict(X)\n",
     "\n",
-    "print(model_01.predict([\n",
-    "    [7.0, 25]\n",
-    "]))"
+    "print(\n",
+    "\tmodel_01.predict(\n",
+    "\t\t[\n",
+    "\t\t\t[7.0, 25]\n",
+    "\t\t]\n",
+    "\t)\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
@@ -117,7 +119,7 @@
    ],
    "source": [
     "pH = df['pH']\n",
-    "plt.scatter(pH, EC_01, label=\"EC 01 - pH Relation\")\n",
+    "plt.scatter(pH, EC_01, label = \"EC 01 - pH Relation\")\n",
     "plt.xlabel('pH')\n",
     "plt.ylabel('EC 01')\n",
     "plt.title('Comparison Of EC 01 & pH')\n",
@@ -125,7 +127,7 @@
     "plt.show()\n",
     "\n",
     "pH = df['pH']\n",
-    "plt.scatter(pH, EC_02, label=\"EC 02 - pH Relation\")\n",
+    "plt.scatter(pH, EC_02, label = \"EC 02 - pH Relation\")\n",
     "plt.xlabel('pH')\n",
     "plt.ylabel('EC 02')\n",
     "plt.title('Comparison Of EC 02 & pH')\n",
@@ -142,9 +144,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-b4ed01db",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (FYP-Soil-Analysis)"
   },
   "language_info": {
    "codemirror_mode": {
